Update 'i6oxxu2aw-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:d7fc62048eb84f8e42c844a482f466bf65a30af1@sha256:c797a90fb5cd3ec91579002d359d7b87b133694a89ac889db969eb48802ad601

--- a/components/i6oxxu2aw-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/i6oxxu2aw-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: i6oxxu2aw-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:d7fc62048eb84f8e42c844a482f466bf65a30af1@sha256:c797a90fb5cd3ec91579002d359d7b87b133694a89ac889db969eb48802ad601
+          name: container-image
